# simpleriscv

./: .gitignore  CMakeLists.txt  README.md
include/: riscv_vm.hpp
src/: CMakeLists.txt  bitmask_utility.hpp  riscv_vm.cpp  riscv_vm.hpp
src/include/: common.hpp  riscv_vm.hpp
tests/: CMakeLists.txt  testrunner.cpp
tests/src/: add.cpp  branch.cpp
